# OopLab3

./: CMakeLists.txt  WavFile.cpp  WavFile.hpp  WavHeader.h  main.cpp
Exceptions/: BadFormatException.hpp  HeaderException.hpp  IOException.hpp  UnsupportedFormatException.hpp
